--- a/Mailchimp-Newsletter-API-using-express/signup.html
+++ b/Mailchimp-Newsletter-API-using-express/signup.html
@@ -60,7 +60,7 @@
                 </label>
             </div> -->
             <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Me Up!</button>
-            <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
+            <p class="mt-5 mb-3 text-muted">&copy; <script>document.write(new Date().getFullYear());</script></p>
         </form>
     </main>
 
